# MonkInterviewBot

./: README.md  main.py  pyproject.toml
static/: index.html
